# Crawloop

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  authorized_domains.yaml  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crawloop/: __init__.py  access.py  browser.py  cli.py  config.py  contract.py  engine.py  executor.py  fallback.py  htmlutil.py  hybrid.py  llm.py  migrations.sql  registry.py  router.py  safety.py  schemas.py  validator.py
crawloop/loop/: __init__.py  _runner.py  access_recovery.py  codegen.py  driver.py  gauntlet.py  jsonpath.py  pathmap.py  promote.py  sampler.py  sandbox.py  trigger.py
docs/: ARCHITECTURE.md  design.html
docs/plans/: 2026-06-13-crawloop-poc.md
examples/: README.md  selfheal_demo.py
prompts/: codegen_contract.txt  codegen_system.txt  codegen_user.txt  extract_system.txt  extract_user.txt  pathmap_system.txt  pathmap_user.txt  residual_system.txt  residual_user.txt
schemas/: job_posting.py  product.py  quote.py
tests/: test_access_recovery.py  test_access_security.py  test_access_strategies.py  test_ast_gate.py  test_audit.py  test_browser.py  test_browser_live.py  test_classifier.py  test_cli.py  test_codegen.py  test_completer.py  test_config.py  test_contract.py  test_engine.py  test_engine_hybrid.py  test_executor.py  test_fallback.py  test_fetch_context.py  test_fixture_server.py  test_gauntlet.py  test_hybrid.py  test_jsonpath.py  test_live_llm_smoke.py  test_loader.py  test_loop_driver.py  test_loop_jsonpath_candidate.py  test_loop_pathmap_candidate.py  test_model_resolution.py  test_oracle_wide_json.py  test_pathmap.py  test_public_api.py  test_rate_limiter.py  test_registry.py  test_registry_accessstore.py  test_router.py  test_sampler.py  test_sandbox.py  test_schemas.py  test_selfheal_e2e.py  test_validator_basic.py  (+2 more)
tests/cassettes/: selfheal.json
tests/fixture_server/: __init__.py  server.py
