[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crawloop"
version = "0.1.0"
description = "Self-healing web crawler: compile your LLM scraper into free, deterministic code that auto-heals when a site's layout changes."
readme = "README.md"
authors = [{ name = "Jimmynycu" }]
keywords = ["web-scraping","web-crawler","scraper","llm","ai","data-extraction","structured-data","self-healing","codegen","playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27", "parsel>=1.9", "pydantic>=2.7", "pyyaml>=6",
  "litellm>=1.40", "playwright>=1.44", "patchright>=1.44",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "respx>=0.21"]

[project.scripts]
crawloop = "crawloop.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

# Ship the package AND its subpackages — crawloop.loop holds the regeneration
# Loop; a plain ["crawloop"] list silently drops it and breaks the built wheel.
# schemas/ is intentionally NOT packaged: it is discovered at runtime by path.
[tool.setuptools.packages.find]
include = ["crawloop*"]

[project.urls]
Homepage = "https://github.com/Jimmynycu/Crawloop"
Repository = "https://github.com/Jimmynycu/Crawloop"
Issues = "https://github.com/Jimmynycu/Crawloop/issues"
